--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,47 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-			"indent": [2, "tab"],
-		"no-tabs": 0
-    }
+	"env": {
+			"es2021": true,
+			"node": true
+	},
+	"extends": [
+			"airbnb-base",
+	// "prettier/@typescript-eslint",
+	// "plugin:@typescript-eslint/recommended",
+	"plugin:prettier/recommended"
+
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+			"ecmaVersion": 12,
+			"sourceType": "module"
+	},
+	"plugins": [
+			"@typescript-eslint",
+	"prettier"
+	],
+	"rules": {
+	"prettier/prettier": "error",
+	"indent": [2, "tab"],
+	"no-tabs": 0,
+	"import/no-extraneous-dependencies": [
+		"error",
+		{
+			"devDependencies": true
+		}
+	],
+	"import/extensions": [
+		"error",
+		"ignorePackages",
+		{
+			"ts": "never"
+		}
+	]
+	},
+"settings": {
+	"import/resolver": {
+		"typescript": {
+
+		}
+	}
+}
 }
