--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
 	"extends": [
 			"airbnb-base",
 	// "prettier/@typescript-eslint",
-	// "plugin:@typescript-eslint/recommended",
+	"plugin:@typescript-eslint/recommended",
 	"plugin:prettier/recommended"
 
 	],
