--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -25,6 +25,9 @@
 	"camelcase":"off",
 	"indent": [2, "tab"],
 	"no-tabs": 0,
+	"@typescript-eslint/no-unused-vars":["error",{
+		"argsIgnorePattern":"_"
+	}],
 	"import/no-extraneous-dependencies": [
 		"error",
 		{
