--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,8 @@
     "rules": {
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
+      "import/prefer-default-export":"off",
+      "react/prop-types":"off",
       "react/jsx-filename-extension": [
         1,
         {
@@ -47,7 +49,8 @@
           "tsx": "never"
         }
      ],
-     "prettier/prettier": "error"
+     "prettier/prettier": "error",
+     "react/jsx-props-no-spreading":"off"
     },
 
     "settings": {
