--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -27,6 +27,7 @@
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "import/prefer-default-export":"off",
+      "@typescript-eslint/no-empty-function":"off",
       "@typescript-eslint/ban-types":"off",
       "react/prop-types":"off",
       "react/jsx-filename-extension": [
