--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -22,6 +22,7 @@
 	"rules": {
 	"prettier/prettier": "warn",
 	"class-methods-use-this":"off",
+	"no-console":"off",
 	"camelcase":"off",
 	"indent": [2, "tab"],
 	"no-tabs": 0,
