--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -28,6 +28,7 @@
 	"no-useless-constructor":"off",
 	"indent": [2, "tab"],
 	"no-tabs": 0,
+	"import/no-unresolved":"off",
 	"@typescript-eslint/no-unused-vars":["error",{
 		"argsIgnorePattern":"_"
 	}],
