--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.7",
     "jest": "26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "pg": "^8.6.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongodb": "^3.6.18",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.2",
     "@types/uuid": "^8.3.0",
