Feat:Configurado Upload de imagen AWS adicionado .env no gitignore para proteger chave AWS

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,2 +1,10 @@
-APP_SECRET=
-APP_WEB_URL=http://localhost:3000
+APP_SECRET= HASH MD5 PARA GERAR TOKEN
+
+APP_WEB_URL=URL PARA APLICAÇÃO WEB
+APP_API_URL=URL DO BACKEND
+
+AWS_ACESS_KEY_ID= ID GERADO NA AMAZOM S3 PARA GUARDAR O UPLOAD DE FOTOS
+AWS_ACESS_KEY_ID= KEY DO SERVIÇO ACIMA
+
+#Storage
+STORAGE_DRIVER=s3
