--- a/Backend/.eslintrc.json
+++ b/Backend/.eslintrc.json
@@ -26,7 +26,7 @@
 	"no-console":"off",
 	"camelcase":"off",
 	"no-useless-constructor":"off",
-	"indent": [2, "tab"],
+	"indent": [2, "space"],
 	"no-tabs": 0,
 	"import/no-unresolved":"off",
 	"@typescript-eslint/no-unused-vars":["error",{
