--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/mime": "^2.0.3",
+    "aws-sdk": "^2.936.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^14.0.0",
     "class-transformer": "^0.4.0",
@@ -21,6 +23,7 @@
     "handlebars": "^4.7.7",
     "jest": "26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "mongodb": "^3.6.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
