Test:Adicionado testes para os Caches da aplicação

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -18,5 +18,10 @@
      "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "jest.config.js",
+    "prettier.config.js",
+    "./dist"
+  ]
 }
