--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,10 +1,18 @@
-APP_SECRET= HASH MD5 PARA GERAR TOKEN
-
-APP_WEB_URL=URL PARA APLICAÇÃO WEB
-APP_API_URL=URL DO BACKEND
-
-AWS_ACESS_KEY_ID= ID GERADO NA AMAZOM S3 PARA GUARDAR O UPLOAD DE FOTOS
-AWS_ACESS_KEY_ID= KEY DO SERVIÇO ACIMA
-
 #Storage
 STORAGE_DRIVER=s3
+
+APP_SECRET=HASH MD5 PARA GERAR TOKEN
+
+APP_WEB_URL=http://localhost:3000
+APP_API_URL=http://localhost:3333
+
+AWS_ACCESS_KEY_ID=ID GERADO NA AMAZOM S3 PARA GUARDAR O UPLOAD DE FOTOS
+AWS_SECRET_ACCESS_KEY=KEY DO SERVIÇO ACIMA
+
+#Storage
+STORAGE_DRIVER=disk
+
+#REDIS
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
