--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.2.2",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
@@ -45,6 +47,7 @@
     "@types/mongodb": "^3.6.18",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.2",
+    "@types/redis": "^2.8.30",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "eslint": "^7.29.0",
