--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -29,6 +29,7 @@
       "import/prefer-default-export":"off",
       "@typescript-eslint/no-empty-function":"off",
       "@typescript-eslint/ban-types":"off",
+      "camelcase":"off",
       "react/prop-types":"off",
       "react/jsx-filename-extension": [
         1,
