--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.1",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
@@ -22,7 +23,7 @@
     "react-spring": "8.0.27",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "uuidv4": "^6.2.8",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yup": "0.29.0"
   },
